# oraculum-harvester

./: .gitignore  AGENTS.md  ANALYSIS_PLAN.md  DERIVED_DATASET_IMPLEMENTATION_PLAN.md  Dockerfile  LLM_REFACTOR_PLAN.md  MARKET_INDUSTRY_PLAN.md  NEWS_INTEGRATION_PLAN.md  README.md  SIMFIN_PARQUET_TRANSFER_PLAN.md  config.yaml  daily_signals_agent_plan.md  local_derived_values_guide.md  mypy.ini  pyproject.toml  sec_prototype.py
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_derived_table.py  0002_create_derived_metrics_view.py  0003_fix_share_price_types.py  0004_add_t_analysis.py  0005_add_market_and_industry.py  0006_daily_market_signals.py  0006_daily_market_signals_view.py  0007_add_news_tables.py  0008_rename_payload_to_statement_data.py  1234567890ab_create_run_log.py  7efecbfca034_create_ticker_table.py  9b3e2f7c1a6d_prefix_tables_and_add_extracted_at.py  d4a1b6e4f2c1_create_statement_tables.py  f3e2d1c0b9a8_create_share_price_table.py
analyst/: __main__.py  app.py  consumer.py  db.py  dependencies.py  models.py
analyst/infrastructure/: engine.py  news_repository.py  parquet_loader.py  partition_manager.py
analyst/jobs/: data_cleanup.py  data_refresh.py
analyst/subscribers/: __init__.py  (+10 more)
common/: __init__.py  config.py  memory.py
docs/: analysis_workflow.md
harvester/: __main__.py  app.py  dispatcher.py  harvester.py  publishers.py
scripts/: load_share_prices_initial.py  run_ops_stack.py  test_parquet_loader.py  test_rollback.py  test_simfin_dir.py  verify_sec_provider.py
ui/: app.py  ui.py
(+178 files in other folders)
