[project]
name = "oraculum-harvestor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "envyaml>=1.10.211231",
    "faststream[kafka]>=0.5.0",
    "lxml>=6.1.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "requests>=2.34.2",
    "simfin>=1.0.2",
    "typer>=0.12.3",
    "edgartools>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
